SERVER-59347 Fix shadowed parameter in timeseries::dotted_path_support